--- a/Exp-2/views/form2.hbs
+++ b/Exp-2/views/form2.hbs
@@ -12,25 +12,17 @@
       <input type="number" name="java" class="form-control" required>
     </div>
     <div class="mb-3">
-<<<<<<< HEAD
       <label class="form-label">DBMS:</label>
-      <input type="number" name="mobile" class="form-control" required>
+      <input type="number" name="dbms" class="form-control" required>
     </div>
     <div class="mb-3">
       <label class="form-label">Cloud Computing:</label>
-=======
-      <label class="form-label">Mobile:</label>
-      <input type="number" name="mobile" class="form-control" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Cloud:</label>
->>>>>>> b06a65e21de2078874fe07f6500b8732f85ac137
       <input type="number" name="cloud" class="form-control" required>
     </div>
     <div class="mb-3">
       <label class="form-label">ML:</label>
       <input type="number" name="ml" class="form-control" required>
-    </div>
+    </div>  
     <div class="mb-3">
       <label class="form-label">Python:</label>
       <input type="number" name="python" class="form-control" required>
